--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "compression": "^1.7.4",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cross-env": "^7.0.3",
     "csurf": "latest",
     "date-fns": "^3.3.1",
     "express": "^4.18.2",
