--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-geolocated": "^4.1.2",
     "react-helmet": "^6.1.0",
     "react-i18next": "^14.0.5",
     "react-icons": "^5.0.1",
