--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.18.2",
     "express-csrf-double-submit-cookie": "^1.2.1",
     "express-session": "^1.18.0",
+    "google-auth-library": "^9.6.3",
     "i18next-browser-languagedetector": "^7.2.0",
     "leaflet": "^1.9.4",
     "mongodb": "^6.3.0",
