--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "leaflet": "^1.9.4",
     "mongodb": "^6.3.0",
     "node-cache": "^5.1.2",
+    "nodemailer": "^6.9.9",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
