--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "express": "^4.18.2",
     "express-csrf-double-submit-cookie": "^1.2.1",
     "express-session": "^1.18.0",
+    "express-sitemap": "^1.8.0",
     "google-auth-library": "^9.6.3",
     "i18next-browser-languagedetector": "^7.2.0",
     "leaflet": "^1.9.4",
     "mongodb": "^6.3.0",
     "node-cache": "^5.1.2",
     "nodemailer": "^6.9.9",
+    "rate-limiter-flexible": "^5.0.0",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
